# remove-audio-silence

./: .gitignore  README.md  pyproject.toml  trim_with_silero_vad.py  workData.ipynb
