[project]
name = "project06-audiopreprocessing"
version = "0.1.0"
description = "Preprocessing Repo for preparing dataset for StyleTTS2 or other models"
authors = [
    {name = "Dr. Rehan Ahmad, Engr. Sharjeel Abid Butt"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "silero-vad (>=6.2.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "phonemizer (>=3.3.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "huggingface (>=0.0.1,<0.0.2)"
]

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
